update content -cv, projects, design -header font

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,13 +12,14 @@
   year={2018}, 
   month={Nov}, 
   pages={926-939.e3}, 
-  language={English} }
+  language={English},
+  preview={neuron-cover-mockup-noisy-bg.jpg} }
  
  @article{Garcia-Marin_Sundiang_Hawken_2015, 
   bibtex_show={true},  
   title={Reduced density of geniculocortical terminals in foveal layer 4A in the macaque primary visual cortex: relationship to S-cone density}, 
   volume={220}, ISSN={18632661}, DOI={10.1007/s00429-014-0826-5}, 
-  abstractNote={© 2014, Springer-Verlag Berlin Heidelberg. The S-cone system is closely linked to the perception of blue/yellow. The trichromatic system of Old-World monkeys and humans has relatively few S-cones in the fovea. In this study, we investigated the distribution of putative S-cone afferents in macaques primary visual cortex (V1) which form a characteristic honeycomb arrangement in layer 4A. It was hypothesized that if there were a low number of S-cone opponent projecting neurons in central vision then this would be seen as a reduction in afferents in foveal layer 4A. Recent studies have shown that the vesicular glutamate transporter 2 (VGlut2) is a marker for thalamic afferent terminals in cortex. The distribution of VGlut2-immunoreactive (-ir) terminals was studied in the foveal and perifoveal representation of V1. It was found that there was a substantial reduction in the terminal density in the foveal representation: the density was 5–6 times lower in the foveal V1 than in regions representing perifoveal eccentricities of 1°–2° and beyond. These findings may provide the cortical substrate of foveal tritanopia, the reduced blue perceptual ability for small fields in the center of gaze.}, 
+  abstract={The S-cone system is closely linked to the perception of blue/yellow. The trichromatic system of Old-World monkeys and humans has relatively few S-cones in the fovea. In this study, we investigated the distribution of putative S-cone afferents in macaques primary visual cortex (V1) which form a characteristic honeycomb arrangement in layer 4A. It was hypothesized that if there were a low number of S-cone opponent projecting neurons in central vision then this would be seen as a reduction in afferents in foveal layer 4A. Recent studies have shown that the vesicular glutamate transporter 2 (VGlut2) is a marker for thalamic afferent terminals in cortex. The distribution of VGlut2-immunoreactive (-ir) terminals was studied in the foveal and perifoveal representation of V1. It was found that there was a substantial reduction in the terminal density in the foveal representation: the density was 5–6 times lower in the foveal V1 than in regions representing perifoveal eccentricities of 1°–2° and beyond. These findings may provide the cortical substrate of foveal tritanopia, the reduced blue perceptual ability for small fields in the center of gaze.}, 
   number={5}, 
   journal={Brain Structure and Function}, 
   author={Garcia-Marin, V. and Sundiang, M. and Hawken, M.J.}, year={2015} }
@@ -28,11 +29,13 @@
   bibtex_show={true},
   title={Dynamic structure of motor cortical neuron co-activity carries behaviorally relevant information}, 
   ISSN={2472-1751}, DOI={10.1162/netn_a_00298}, 
-  abstractNote={Skillful, voluntary movements are underpinned by computations performed by networks of interconnected neurons in the primary motor cortex (M1). Computations are reflected by patterns of co-activity between neurons. Using pairwise spike time statistics, co-activity can be summarized as a functional network (FN). Here, we show that the structure of FNs constructed from an instructed-delay reach task in non-human primates are behaviorally specific: low dimensional embedding and graph alignment scores show that FNs constructed from closer target reach directions are also closer in network space. Using short intervals across a trial we constructed temporal FNs and found that temporal FNs traverse a low-dimensional subspace in a reach-specific trajectory. Alignment scores show that FNs become separable and correspondingly decodable shortly after the instruction cue. Finally, we observe that reciprocal connections in FNs transiently decrease following the instruction cue consistent with the hypothesis that information external to the recorded population temporarily alters the structure of the network at this moment.It remains unclear how motor cortical neurons flexibly perform the computations necessary to generate movement. We hypothesized that neuronal co-activity contains movement information, and its dynamics can reveal how the population switches computations during a task. We quantified co-activity as a Functional Network (FN) with single neurons as nodes and population co-activity as directed weighted edges. We also constructed FNs within short epochs across a trial to determine when co-activity begins to carry information and to investigate the dynamic structure of these interactions. Following the instruction cue, reciprocal connections in FNs transiently decrease, and shortly after, FNs become maximally decodable for reach direction.}, 
+  abstract={Skillful, voluntary movements are underpinned by computations performed by networks of interconnected neurons in the primary motor cortex (M1). Computations are reflected by patterns of co-activity between neurons. Using pairwise spike time statistics, co-activity can be summarized as a functional network (FN). Here, we show that the structure of FNs constructed from an instructed-delay reach task in non-human primates are behaviorally specific: low dimensional embedding and graph alignment scores show that FNs constructed from closer target reach directions are also closer in network space. Using short intervals across a trial we constructed temporal FNs and found that temporal FNs traverse a low-dimensional subspace in a reach-specific trajectory. Alignment scores show that FNs become separable and correspondingly decodable shortly after the instruction cue. Finally, we observe that reciprocal connections in FNs transiently decrease following the instruction cue consistent with the hypothesis that information external to the recorded population temporarily alters the structure of the network at this moment.It remains unclear how motor cortical neurons flexibly perform the computations necessary to generate movement. We hypothesized that neuronal co-activity contains movement information, and its dynamics can reveal how the population switches computations during a task. We quantified co-activity as a Functional Network (FN) with single neurons as nodes and population co-activity as directed weighted edges. We also constructed FNs within short epochs across a trial to determine when co-activity begins to carry information and to investigate the dynamic structure of these interactions. Following the instruction cue, reciprocal connections in FNs transiently decrease, and shortly after, FNs become maximally decodable for reach direction.}, 
   journal={Network Neuroscience}, 
   author={Sundiang, M. and Hatsopoulos, N. G. and MacLean, J. N.}, 
   year={2022}, month={Dec}, pages={1–40}, 
-  selected={true}}
+  selected={true},
+  code={https://github.com/hatsopoulos-lab/macaque-dynamic_functional_networks},
+  preview={dynamic_FNs.jpg}}
 
   
  @article{Walker_Pirschel_Sundiang_Niekrasz_MacLean_Hatsopoulos_2021,
@@ -40,7 +43,9 @@
  title={Chronic wireless neural population recordings with common marmosets}, 
  volume={36}, ISSN={22111247}, 
  DOI={10.1016/j.celrep.2021.109379}, 
- abstractNote={Marmosets are an increasingly important model system for neuroscience in part due to genetic tractability and enhanced cortical accessibility, due to a lissencephalic neocortex. However, many of the techniques generally employed to record neural activity in primates inhibit the expression of natural behaviors in marmosets precluding neurophysiological insights. To address this challenge, we have developed methods for recording neural population activity in unrestrained marmosets across multiple ethological behaviors, multiple brain states, and over multiple years. Notably, our ﬂexible methodological design allows for replacing electrode arrays and removal of implants providing alternative experimental endpoints. We validate the method by recording sensorimotor cortical population activity in freely moving marmosets across their natural behavioral repertoire and during sleep.}, 
+ abstract={Marmosets are an increasingly important model system for neuroscience in part due to genetic tractability and enhanced cortical accessibility, due to a lissencephalic neocortex. However, many of the techniques generally employed to record neural activity in primates inhibit the expression of natural behaviors in marmosets precluding neurophysiological insights. To address this challenge, we have developed methods for recording neural population activity in unrestrained marmosets across multiple ethological behaviors, multiple brain states, and over multiple years. Notably, our ﬂexible methodological design allows for replacing electrode arrays and removal of implants providing alternative experimental endpoints. We validate the method by recording sensorimotor cortical population activity in freely moving marmosets across their natural behavioral repertoire and during sleep.}, 
  number={2}, 
  journal={Cell Reports}, 
- author={Walker, J. D. and Pirschel, F. and Sundiang, M. and Niekrasz, M. and MacLean, J. N. and Hatsopoulos, N. G.}, year={2021}, month={Jul}, pages={109379}, language={en} }
+ author={Walker, J. D. and Pirschel, F. and Sundiang, M. and Niekrasz, M. and MacLean, J. N. and Hatsopoulos, N. G.}, 
+ year={2021}, month={Jul}, pages={109379}, language={en},
+ preview={chronic_wireless_recording.png} }
